--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             to refugees and asylum seekers so far. <strong>Thank you!</strong>
           </div>
 
-          <div class="hero">
+          <article class="hero">
             <h1>Bikes for Refugees</h1>
             <p>
               Providing donated bikes and accessories to refugees and asylum
@@ -66,13 +66,13 @@
             </p>
             <button>Donate a bike today</button>
             <button>Volunteer</button>
-          </div>
+          </article>
 
           <div>
             <h2 class="heading-underline">Learn more</h2>
-
-            <div>
-              <div class="article">
+          </div>
+        </div>
+              <section class="article">
                 <h3 class="article__title">Why do refugees need bikes?</h3>
                 <p class="article__summary">
                   Many refugees are placed in housing in areas where there are
@@ -85,9 +85,9 @@
                     Learn more
                   </a>
                 </p>
-              </div>
+              </section>
 
-              <div class="article">
+              <section class="article">
                 <h3 class="article__title">How can I help?</h3>
                 <p class="article__summary">
                   We need lots of bikes and bike accessories! If you have an
@@ -100,7 +100,7 @@
                     Learn more
                   </a>
                 </p>
-              </div>
+              </section>
             </div>
           </div>
         </main>
@@ -108,11 +108,11 @@
         <aside class="sidebar">
           <h2 class="heading-underline">Upcoming events</h2>
 
-          <div class="article">
+          <article class="article">
             <img
               class="article__thumbnail"
               src="spring-fundraisers_thumbnail.jpg"
-              alt=""
+              alt="Spring fundraisers thumbnail"
             />
             <div class="article__content">
               <h3 class="article__title">
@@ -123,9 +123,9 @@
                 Médecins Sans Frontières.
               </p>
             </div>
-          </div>
+          </article>
 
-          <div class="article">
+          <article class="article">
             <img
               class="article__thumbnail"
               src="bikes-for-refugees_logo.jpg"
@@ -136,9 +136,9 @@
                 <a class="article__title-link" href="#">Bike dropoff event in Edinburgh on May 11</a>
               </h3>
             </div>
-          </div>
+          </article>
 
-          <div class="article">
+          <article class="article">
             <img
               class="article__thumbnail"
               src="edinburgh-damascus_thumbnail.png"
@@ -153,7 +153,7 @@
                 to Damascus.
               </p>
             </div>
-          </div>
+          </article>
 
           <a
             href="https://www.facebook.com/BikesforRefugeesScotland/events/?ref=page_internal"
@@ -167,13 +167,13 @@
         </aside>
 
     <footer class="footer">
-      <div class="footer__content">
+      <article class="footer__content">
         <p>
           <strong>Bikes for Refugees Scotland is a volunteer-led project to help
           people explore and make connections with their local communities.</strong>
         </p>
         <p>Website by Code Your Future</p>
-      </div>
+      </article>
     </footer>
   </body>
 </html>
