--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <article class="article">
             <img
               class="article__thumbnail"
-              src="spring-fundraisers_thumbnail.jpg"
+              src="https://github.com/ElenaBarker/bikes-for-refugees/blob/main/images/spring-fundraisers_thumbnail.jpg"
               alt="Spring fundraisers thumbnail"
             />
             <div class="article__content">
@@ -128,8 +128,8 @@
           <article class="article">
             <img
               class="article__thumbnail"
-              src="bikes-for-refugees_logo.jpg"
-              alt=""
+              src="https://github.com/ElenaBarker/bikes-for-refugees/blob/main/images/bikes-for-refugees_logo.jpg"
+              alt="Bikes for refugees logo"
             />
             <div class="article__content">
               <h3 class="article__title">
@@ -141,8 +141,8 @@
           <article class="article">
             <img
               class="article__thumbnail"
-              src="edinburgh-damascus_thumbnail.png"
-              alt=""
+              src="https://github.com/ElenaBarker/bikes-for-refugees/blob/main/images/edinburgh-damascus_thumbnail.png"
+              alt="Edinburgh Damascus thumbnail"
             />
             <div class="article__content">
               <h3 class="article__title">
